# app/app/src/main/openapi.json
@@ -897,6 +897,14 @@
           "nomeRepresentante": {
             "type": "string",
             "nullable": true
+          },
+          "notas": {
+            "type": "string",
+            "nullable": true
+          },
+          "referencia": {
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
